--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@headlessui/react": "^1.4.1",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.22.0",
+    "base64-url": "^2.3.3",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
+    "js-sha256": "^0.9.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
+    "react-palette": "^1.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -21,6 +27,7 @@
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
+    "spotify-web-api-js": "^1.5.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
@@ -52,6 +59,5 @@
     "autoprefixer": "^9.8.8",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
